survey QOL updates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,6 +74,10 @@
         </nav>
         {% endblock %}
         {% block body %}{% endblock %}
+        <script src="https://unpkg.com/feather-icons"></script>
         {% block javascripts %}{% endblock %}
+        <script>
+            feather.replace()
+        </script>
     </body>
 </html>
