--- a/templates/organization/form.html.twig
+++ b/templates/organization/form.html.twig
@@ -7,7 +7,35 @@
 			<div class="row">
 				<div class="col">
 					<h1>Add/Edit Company</h1>
-					{{ form(form) }}
+					{{ form_start(form) }}
+
+					{{ form_row(form.custom_id) }}
+					{{ form_row(form.contactPerson) }}
+					{{ form_row(form.name) }}
+					<div class="row">
+						<div class="col">
+							{{ form_row(form.streetAddress1 ) }}
+						</div>
+						<div class="col">
+							{{ form_row(form.streetAddress2) }}
+						</div>
+					</div>
+					{{ form_row(form.city) }}
+					<div class="row">
+						<div class="col">
+							{{ form_row(form.state) }}
+						</div>
+						<div class="col">
+							{{ form_row(form.postalCode) }}
+						</div>
+					</div>
+					{{ form_row(form.contactPhoneNumber) }}
+					{{ form_row(form.contactFax) }}
+					{{ form_row(form.contactEmail) }}
+					{{ form_row(form.directoryUrl) }}
+					{{ form_row(form.tags) }}
+
+					{{ form_end(form) }}
 				</div>
 			</div>
 		</div>
