Update form for org *add fields for country, member type, and other contact number

--- a/templates/organization/form.html.twig
+++ b/templates/organization/form.html.twig
@@ -29,10 +29,13 @@
 							{{ form_row(form.postalCode) }}
 						</div>
 					</div>
+					{{ form_row(form.country) }}
 					{{ form_row(form.contactPhoneNumber) }}
 					{{ form_row(form.contactFax) }}
+					{{ form_row(form.contactOtherNumber) }}
 					{{ form_row(form.contactEmail) }}
 					{{ form_row(form.directoryUrl) }}
+					{{ form_row(form.membershipCategory) }}
 					{{ form_row(form.tags) }}
 
 					{{ form_end(form) }}
