--- a/templates/organization/list.html.twig
+++ b/templates/organization/list.html.twig
@@ -29,6 +29,7 @@
                 <li class="list-group-item" id="{{ organization.id}}">
                     <a href="{{path("organizations_edit", {id: organization.id})}}">{{ organization.name }}</a>
                     <a href="{{ path("organization_surveys", {id: organization.id}) }}" class="btn btn-link text-secondary">Surveys</a>
+                    <a href="{{ path("organization_content", {id: organization.id}) }}" class="btn btn-link text-secondary">Posted Content ({{ organization.postedContents|length }})</a>
                     <a onClick='return confirm("This will delete all open and closed surveys ({{ organization.surveys|length() }}) for this organization. Are you sure you want to proceed?")' href="{{ path("organizations_delete", {id: organization.id}) }}" class="btn btn-link text-danger">Delete</a>
                     {% if openSurveys > 0 %}
                     <span class="float-right badge badge-primary">{{ openSurveys }} Open Survey(s)</span>
