--- a/templates/organization/contacts.html.twig
+++ b/templates/organization/contacts.html.twig
@@ -57,8 +57,12 @@
 					<input type="email" class="form-control" name="email" id="contactEmail" placeholder="email">
 				</div>
 				<div class="form-group">
-					<label for="contactPhone">Phone</label>
+					<label for="contactPhone">Office Phone</label>
 					<input type="text" class="form-control" name="phone" id="contactPhone" placeholder="phone">
+				</div>
+				<div class="form-group">
+					<label for="mobilePhone">Mobile Phone</label>
+					<input type="text" class="form-control" name="mobile" id="mobilePhone" placeholder="phone">
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
