--- a/templates/organization/form.html.twig
+++ b/templates/organization/form.html.twig
@@ -48,9 +48,9 @@
 			<div class="list-group">
 				{% if contacts %}
 					{% for contact in contacts %}
-						<div class="list-group-item">
+						<div class="list-group-item{{ contact.isPrimary ? ' bg-dark text-light' : '' }}">
 							<div class="d-flex w-100 justify-content-between">
-								<h5 class="mb-1"><a href="{{ path("view_contact", {uuid:contact.uuid}) }}">{{ contact.name }}</a></h5>
+								<h5 class="mb-1"><a href="{{ path("view_contact", {uuid:contact.uuid}) }}"{{ contact.isPrimary ? ' class="text-light"' : '' }}>{{ contact.name }}</a></h5>
 								<small>{{ contact.typeString }}</small>
 							</div>
 							<ul>
@@ -90,7 +90,13 @@
 							<label for="mobilePhone">Mobile Phone</label>
 							<input type="text" class="form-control" name="mobile" id="mobilePhone" placeholder="phone">
 						</div>
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<div class="form-check">
+							<input type="checkbox" class="form-check-input" id="isPrimary" name="primary">
+							<label for="isPrimary" class="form-check-label">Primary</label>
+						</div>
+						<div class="mt-2">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
 					</form>
 				</div>
 			</div>
