--- a/templates/contact/view.html.twig
+++ b/templates/contact/view.html.twig
@@ -29,6 +29,10 @@
 					<input type="text" class="form-control" name="name" id="contactName" placeholder="Name" required value="{{ contact.name }}">
 				</div>
 				<div class="form-group">
+					<label for="contactTitle">Role/Title</label>
+					<input type="text" class="form-control" name="title" id="contactTitle" placeholder="Job title (optional)" value="{{ contact.title }}">
+				</div>
+				<div class="form-group">
 					<label for="contactType">Type</label>
 					<select class="form-control" name="type" id="contactType">
 						<option value="1"{{ 1 == contact.type ? ' selected' : '' }}>New leads</option>
