--- a/templates/organization/form.html.twig
+++ b/templates/organization/form.html.twig
@@ -46,7 +46,7 @@
 					{% for contact in contacts %}
 						<div class="list-group-item{{ contact.isPrimary ? ' bg-dark text-light' : '' }}">
 							<div class="d-flex w-100 justify-content-between">
-								<h5 class="mb-1"><a href="{{ path("view_contact", {uuid:contact.uuid}) }}"{{ contact.isPrimary ? ' class="text-light"' : '' }}>{{ contact.name }}</a></h5>
+								<h5 class="mb-1"><a href="{{ path("view_contact", {uuid:contact.uuid}) }}"{{ contact.isPrimary ? ' class="text-light"' : '' }}>{{ contact.name }} ({{ contact.title }})</a></h5>
 								<small>{{ contact.typeString }}</small>
 							</div>
 							<ul>
@@ -63,6 +63,10 @@
 						<div class="form-group">
 							<label for="contactName">Name</label>
 							<input type="text" class="form-control" name="name" id="contactName" placeholder="Name" required>
+						</div>
+						<div class="form-group">
+							<label for="contactTitle">Role/Title</label>
+							<input type="text" class="form-control" name="title" id="contactTitle" placeholder="Job title (optional)">
 						</div>
 						<div class="form-group">
 							<label for="contactType">Type</label>
