--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,6 +79,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+        <script src="https://cdn.datatables.net/plug-ins/1.10.20/api/row().show().js"></script>
         {% block javascripts %}{% endblock %}
         <script>
             feather.replace()
